[Patch17] fix wrong instructions; strike out venv option when conda selected; compatible with dark mode but a bit ugly; grid border and margin styling

--- a/doc/scss/colors.scss
+++ b/doc/scss/colors.scss
@@ -3,6 +3,7 @@
   --sk-cyan-dark: #30799c;
   --sk-cyan: #3499cd;
 
+  --sk-orange-darkest: #451b00;
   --sk-orange-dark: #e07200;
   --sk-orange: #ff9c34;
   --sk-orange-light: #ffb260;
@@ -10,6 +11,7 @@
   --sk-orange-lightest: #fff3d3;
 
   --sk-text-dark: #222832;
+  --sk-text-light: #ced6dd;
 
   --sk-background-dim-light: #f8f8f8;
   --sk-background-dim-dark: #222222;
